# ferrous-mod-manager

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  dev-build.yml  release.yml
app-ui/: Cargo.toml  README.md
app-ui/src/: main.rs
examples/: gen_mock_home.rs  mock_smoke.rs
spike-iced/: Cargo.toml  README.md
spike-iced/src/: main.rs
src/: achievements.rs  collections.rs  conflict.rs  dependency.rs  detector.rs  errors.rs  fsutil.rs  launch.rs  lib.rs  locations.rs  main.rs  models.rs  parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/parser/: mod_descriptor.rs  mod_file.rs  nom_parser.rs  vdf.rs
tests/fixtures/: test.vdf  test_mod.mod
tests/fixtures/achievements/cosmetic_mod/: descriptor.mod
tests/fixtures/achievements/gameplay_mod/: descriptor.mod
tests/fixtures/achievements/gameplay_mod/common/traits/: leader_traits.txt
tests/fixtures/conflict/mod_a/common/traits/: bar.txt  foo.txt
tests/fixtures/conflict/mod_b/common/traits/: foo.txt
tests/fixtures/conflict/mod_b/events/: my_event.txt
tests/fixtures/discover/mod/: invalid.mod  readme.txt  valid.mod
tests/fixtures/fake_home/.steam/steam/steamapps/: libraryfolders.vdf
tests/fixtures/fake_home_no_games/.steam/steam/steamapps/: libraryfolders.vdf
tests/fixtures/mod_collections/123456/: collection.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css
ui/src/lib/: CollectionPanel.svelte  CollectionSelector.svelte  CollectionsManager.svelte  ConflictTooltip.svelte  Footer.svelte  GameSelector.svelte  InstalledList.svelte  LoadOrder.svelte  ModList.svelte  ModRow.svelte  Sidebar.svelte  StatusBar.svelte  ThemeToggle.svelte  Toast.svelte  Toolbar.svelte  catalog.ts  types.ts
