# Native Iced desktop UI for Ferrous Mod Manager (replaces the Svelte + Tauri shell).
[package]
name = "app-ui"
version = "0.1.0"
edition = "2024"
publish = false

# Ship the binary under the product name (release artifacts, `which`, etc.).
# `cargo run -p app-ui` still works — this only renames the output file.
[[bin]]
name = "ferrous-mod-manager"
path = "src/main.rs"

# `default` keeps the wgpu (GPU) renderer for the shipped app. Building with
# `--no-default-features` drops wgpu and leaves only tiny-skia, iced's CPU
# renderer — needed for headless capture under Xvfb, where the software-GL
# stack segfaults inside wgpu before iced can fall back on its own.
[features]
default = ["wgpu"]
wgpu = ["iced/wgpu"]

[dependencies]
ferrous-mod-manager = { path = ".." }
iced = { version = "0.13", default-features = false, features = [
    "tiny-skia",
    "fira-sans",
    "auto-detect-theme",
    "svg",
] }
# Native file picker for collection import/export. The xdg-portal backend is
# pure-Rust (D-Bus portal, no system GTK at build time); MIT-licensed.
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "async-std",
] }
