# THROWAWAY Phase-0 spike (see ~/.claude/plans/i-want-to-reconsider-curious-robin.md).
# Rebuilds only the Collection panel in Iced to de-risk the UI re-platform.
# Not part of the shipping app; delete after the decision gate.
[package]
name = "spike-iced"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ferrous-mod-manager = { path = ".." }
iced = { version = "0.13", features = ["svg"] }
